bk_ida/gccida/c0/get_condition_for_loop
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_condition_for_loop/src/loop.c:9808:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v2; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_condition_for_loop/src/loop.c:9814:24: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v2 = swap_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)comparison); 
                       ^~~~~~~~
                       rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_condition_for_loop/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_condition_for_loop/src/loop.c:9814:35: error: expected expression
v2 = swap_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)comparison); 
                                  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_condition_for_loop/src/obj/loop.o] Error 1
